[gd_scene load_steps=3 format=3 uid="uid://dgno57xgtp0gb"]

[ext_resource type="Script" path="res://Objects/Scripts/mission_select_menu.gd" id="1_xbfif"]
[ext_resource type="PackedScene" uid="uid://0vplimxr7v7e" path="res://Objects/Scenes/mission_select_card.tscn" id="2_hauyt"]

[node name="mission_select_menu" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbfif")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="MainContainer" type="HBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
alignment = 1

[node name="VContainer" parent="AspectRatioContainer/MainContainer" instance=ExtResource("2_hauyt")]
layout_mode = 2

[node name="VContainer2" parent="AspectRatioContainer/MainContainer" instance=ExtResource("2_hauyt")]
layout_mode = 2

[node name="VContainer3" parent="AspectRatioContainer/MainContainer" instance=ExtResource("2_hauyt")]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -304.0
offset_top = 53.0
offset_right = 304.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 32
text = "SELECT A MISSION"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="AspectRatioContainer/MainContainer/VContainer/Option" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MainContainer/VContainer2/Option" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MainContainer/VContainer3/Option" to="." method="_on_option_3_pressed"]

[editable path="AspectRatioContainer/MainContainer/VContainer"]
[editable path="AspectRatioContainer/MainContainer/VContainer2"]
[editable path="AspectRatioContainer/MainContainer/VContainer3"]
